--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "node-sass": "^4.12.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
     "parcel-bundler": "^1.12.3",
     "typescript": "^3.6.3"
   }
